fix overflow

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -14,7 +14,6 @@ body {
     color: white;
     font-family: sans-serif;
     text-shadow: 0 0 5px black;
-    overflow: hidden;
 }
 
 .container {
